--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ rvm:
   - 1.9.3
   - 1.9.2
 gemfile:
-  - gemfiles/3.0.gemfile
-  - gemfiles/3.1.gemfile
-  - gemfiles/3.2.gemfile
+  - gemfiles/rails_3_1.gemfile
+  - gemfiles/rails_3_2.gemfile
+  - gemfiles/rails_4_0.gemfile
