--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+before_install: gem install bundler --pre
+
 language: ruby
+
 rvm:
   - 2.1.0
   - 2.0.0
   - 1.9.3
+
 gemfile:
   - gemfiles/rails_3_1.gemfile
   - gemfiles/rails_3_2.gemfile
